crates/keron-lang/tests/corpus/errors/check/resource_kinds_remain_distinct.keron
from "std:fs" use symlink

val s: Symlink = symlink(from = "a", to = "b")
val f: File = s